<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class () extends Migration {
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('teams', function (Blueprint $table) {
            $table->id();
            $table->foreignId('tenant_id')->nullable()->constrained('tenants')->nullOnDelete();
            $table->foreignId('user_id')->constrained()->onDelete('cascade');
            $table->string('name');
            $table->string('slug')->unique()->nullable();
            $table->boolean('is_public')->default(true);
            $table->timestamp('activated_at')->nullable();
            $table->string('inactive_reason')->nullable();
            $table->timestamps();
            $table->unique(['tenant_id', 'name', 'user_id']);
            $table->index('slug');
        });

        Schema::table('users', function (Blueprint $table) {
            $table->foreignId('default_team_id')->nullable()->index()->constrained('teams')->nullOnDelete();
        });

        Schema::create('team_user', function (Blueprint $table) {
            $table->id();
            $table->foreignId('team_id')->constrained()->onDelete('cascade');
            $table->foreignId('user_id')->constrained()->onDelete('cascade');
            $table->boolean('joined')->default(false);
            $table->enum('action', ['request_to_user', 'request_from_user'])->default('request_to_user');
            $table->timestamps();
            $table->unique(['team_id', 'user_id']);
            $table->index('team_id');
            $table->index('user_id');
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('team_user');
        Schema::table('users', function (Blueprint $table) {
            $table->dropForeign(['default_team_id']);
            $table->dropIndex(['default_team_id']);
            $table->dropColumn('default_team_id');
        });
        Schema::dropIfExists('teams');
    }
};
